# python-poppler-qt5

./: poppler-page-transition.sip  poppler-page.sip  poppler-qt5.sip  project.py  pyproject.toml  setup.py  types.sip
sip/: poppler-page-transition.sip  poppler-page.sip  popplerqt5.sip  types.sip
