# Specify sip v5 as the build system for the package.
[build-system]
requires = ["sip >=5, <6", "PyQt-builder >=1, <2"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "popplerqt5"

[tool.sip.project]
sip-include-dirs = [
    "/Users/admin/.conan/data/pyqt/5.13.1/clarisys/stable/source/pyqt-src/sip"
]

[tool.sip.bindings.popplerqt5]
libraries = []
disabled-features = ["QTXML_AVAILABLE"]
library-dirs = []
include-dirs = []
