[build-system]
requires = ["sip >=5, <6", "PyQt-builder >=1, <2"]
build-backend = "sipbuild.api"

[tool.sip.metadata]
name = "popplerqt5"

[tool.sip.project]
sip-include-dirs = [
    "/usr/share/sip/PyQt5"
]

[tool.sip.bindings.popplerqt5]
tags = ["POPPLER_V0_64_0"]
libraries = ["poppler-qt5"]
disabled-features = ["QTXML_AVAILABLE"]
# library-dirs = ["/usr/lib/x86_64-linux-gnu"]
# include-dirs = []
